--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <!-- Sección "Nuestros Servicios" -->
         <section class="nuestros_servicios">
             <div class="title-container">
-                <h4 id="nuestros-servicios">Nuestros Servicios</h4>
+                <h4 id="nuestros_servicios">Nuestros Servicios</h4>
             </div>
             <div class="descripcion_seccion">
                 <p>En esta seccion encontrarás toda la información sobre atención integral en fonoaudiología
@@ -177,7 +177,7 @@
                 <div>
                     <a href="https://wa.me/56956129721?text=Hola,%20quiero%20más%20información"><img
                             src="Assets/img/wts_icon.png" alt=""></a>
-                    <a>+569 56129721</a>
+                    <a>WhatsApp</a>
                 </div>
                 <div>
                     <a href="https://www.instagram.com/espaciopoyen/"><img src="Assets/img/icono-instagram.jpg"
