--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
             <a href="#contactanos">
                 <h6>Contáctanos</h6>
             </a>
+            <a href="#horarios">
+                <h6>Horarios de atención</h6>
+            </a>
         </div>
     </nav>
 
@@ -106,7 +109,8 @@
             <div class="descripcion_seccion">
                 <p>En esta seccion encontrarás toda la información sobre atención integral en fonoaudiología
                     y terapia ocupacional para niños y adultos. Además, te invitamos a seguirnos
-                    en <a href="https://www.instagram.com/espaciopoyen/" style="color: deeppink;">Instagram</a>, donde compartimos útiles consejos para madres, padres y cuidadores.
+                    en <a href="https://www.instagram.com/espaciopoyen/" style="color: deeppink;">Instagram</a>, donde
+                    compartimos útiles consejos para madres, padres y cuidadores.
                 </p>
             </div>
             <div class="cards-container servicios">
@@ -168,6 +172,27 @@
             </div>
             </div>
         </section>
+        <section id="horarios">
+            <div class="title-container">
+                <h4>Horarios de atención</h4>
+            </div>
+            <div class="descripcion_seccion">
+                <p>Lunes a viernes de 9:00 a 19:00 horas / Sábados 9:00 a 14:00 horas</p>
+
+            </div>
+        </section>
+        <section id="">
+            <div class="title-container">
+                <h4>Ubicación</h4>
+            </div>
+            <div class="descripcion_seccion">
+                <p>La Concepción 81 Oficina 705</p>
+                <iframe
+                    src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3329.9451168091146!2d-70.6177015257299!3d-33.42467519619013!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x9662cf640f83de01%3A0x46c2c35938d7a800!2sLa%20Concepci%C3%B3n%2081%2C%207500010%20Providencia%2C%20Regi%C3%B3n%20Metropolitana!5e0!3m2!1ses!2scl!4v1728919502593!5m2!1ses!2scl"
+                    width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"
+                    referrerpolicy="no-referrer-when-downgrade"></iframe>
+            </div>
+        </section>
     </main>
 
     <footer>
@@ -189,10 +214,7 @@
                     <a>contactopoyen@gmail.com</a>
                 </div>
                 <div>
-                    <a
-                        href="https://www.google.com/maps/place/La+Concepci%C3%B3n+81,+7500010+Providencia,+Regi%C3%B3n+Metropolitana/@-33.4246752,-70.6177015,17z/data=!3m1!4b1!4m6!3m5!1s0x9662cf640f83de01:0x46c2c35938d7a800!8m2!3d-33.4246797!4d-70.6151266!16s%2Fg%2F11c28rsvh9?entry=ttu&g_ep=EgoyMDI0MTAwMi4xIKXMDSoASAFQAw%3D%3D"><img
-                            src="Assets/img/location_icon.png" alt=""></a>
-                    <a>La Concepción 81 Oficina 705</a>
+
                 </div>
             </div>
         </nav>
