--- a/index.html
+++ b/index.html
@@ -20,20 +20,20 @@
 
     <nav class="barra_de_orden">
         <div class="links_a_secciones">
-            <a href="#inicio">
-                <h6>Inicio</h6>
-            </a>
             <a href="#quienes_somos">
                 <h6>Quienes somos</h6>
             </a>
             <a href="#nuestros_servicios">
                 <h6>Nuestros Servicios</h6>
             </a>
-            <a href="#contactanos">
-                <h6>Contáctanos</h6>
-            </a>
             <a href="#horarios">
                 <h6>Horarios de atención</h6>
+            </a>
+            <a href="#mapa">
+                <h6>Ubicación</h6>
+            </a>
+            <a href="#contactanos">
+                <h6>Contáctanos</h6>
             </a>
         </div>
     </nav>
@@ -181,7 +181,7 @@
 
             </div>
         </section>
-        <section id="">
+        <section id="mapa">
             <div class="title-container">
                 <h4>Ubicación</h4>
             </div>
